<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity"
    android:background="#ffc8d0ff">

    <TextView
        android:text="@string/id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idnumber"
        android:padding="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/id_number"
        android:id="@+id/numberid"
        android:padding="10sp"
        android:layout_alignBottom="@+id/idnumber"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/overlay_text"
        android:textSize="40sp"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_below="@+id/textClock"
        android:layout_toEndOf="@+id/idnumber"
        android:layout_marginTop="35sp"
        android:layout_toStartOf="@+id/textClock" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:textSize="30sp"
        android:id="@+id/start_button"
        android:layout_marginTop="41sp"
        android:paddingRight="70sp"
        android:paddingLeft="70sp"
        android:background="#ff4366ff"
        android:focusable="true"
        android:clickable="true"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_button"
        android:textSize="30sp"
        android:id="@+id/about_button"
        android:paddingRight="70sp"
        android:paddingLeft="70sp"
        android:background="#ff4366ff"
        android:clickable="true"
        android:layout_above="@+id/textView3"
        android:layout_alignStart="@+id/start_button"
        android:layout_marginBottom="89dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/study_name_text"
        android:id="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:padding="5sp"
        android:layout_toStartOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/version_number_text"
        android:id="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:padding="5sp"/>

    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textClock"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:padding="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/app_written_by"
        android:textSize="12sp"
        android:gravity="center"
        android:id="@+id/textView7"
        android:layout_alignBottom="@+id/textView3"
        android:layout_centerHorizontal="true" />




</RelativeLayout>
