<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CIDpopup_element"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ChangePopup"
    android:background="#ff000000"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/popupidtitle"
        android:textColor="#FFFFFFFF"
        android:padding="10dp"
        android:id="@+id/CIDTitle"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_id_number_text"
        android:textColor="#FFFFFFFF"
        android:padding="10dp"
        android:id="@+id/CIDNewNumberText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CIDNewNumber"
        android:inputType="textNoSuggestions"
        android:textColor="#FFFFFFFF"
        android:background="#ffcdc9cb" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/study_password_text"
        android:textColor="#FFFFFFFF"
        android:padding="10dp"
        android:id="@+id/CIDPassText" />

    <EditText
        android:labelFor="@+id/CIDPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text=""
        android:textColor="#FFFFFFFF"
        android:background="#ffcdc9cb"
        android:ems="10"
        android:id="@+id/CIDPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text"
            android:id="@+id/CIDSubmit"
            android:padding="10dp"
            android:layout_gravity="bottom|center_horizontal" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            android:id="@+id/CIDCancel"
            android:padding="10dp"
            android:layout_gravity="center_horizontal|bottom"/>

    </LinearLayout>


</LinearLayout>